# chord

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  KEYBINDINGS.md  LICENSE  PERFORMANCE.md  PLAN.md  RADIO.md  README.md  REFER.md  SECURITY.md  build.rs  cache.json  pyproject.toml
.cargo/: config.toml
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: release.yml  test.yml
proto/: remote.proto
scripts/: check_radios.py  generate_radios.py  generate_radios_local.py  m3u_to_toml.py
src/: config.rs  main.rs
src/cli/: handlers.rs  mod.rs
src/core/: config.rs  constants.rs  dsp.rs  error.rs  logger.rs  mod.rs  models.rs  radio_stations.rs  remote.rs  social.rs  streamer.rs  visualizer.rs
src/player/: app.rs  audio.rs  mod.rs
src/player/ui/: components.rs  mod.rs  theme.rs
src/storage/: index.rs
