[package]
name = "chord"
version = "1.2.6"
edition = "2021"

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "stream", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
anyhow = "1.0"
lofty = "0.21"
symphonia = { version = "0.5", features = ["all"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
walkdir = "2.5"
uuid = { version = "1.7", features = ["v4"] }
ratatui = "0.29"
rodio = { version = "0.17", features = ["flac", "vorbis", "wav", "mp3", "symphonia-all"] }
crossterm = { version = "0.27", features = ["events"] }
ratatui-image = "3.0.0"
image = "0.25"
rayon = "1.12.0"
rustfft = "6.4.1"
realfft = "3.5.0"
thiserror = "2.0.18"
