[package]
name = "chord"
version = "1.3.0"
edition = "2021"
description = "A modern, fast, and beautiful terminal music player and radio streamer."
homepage = "https://github.com/0xcr3at0rx/chord"
repository = "https://github.com/0xcr3at0rx/chord"
license = "MIT"
authors = ["0xcr3at0rx"]

[dependencies]
tokio = { version = "1.36", features = ["rt-multi-thread", "macros", "sync", "net", "io-util"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "stream", "rustls-tls", "rustls-tls-native-roots"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
anyhow = "1.0"
lofty = "0.21"
symphonia = { version = "0.5", features = ["all"] }
chrono = { version = "0.4", features = ["serde"] }
directories = "5.0"
walkdir = "2.5"
uuid = { version = "1.7", features = ["v4"] }
ratatui = "0.29"
rodio = { version = "0.17", features = ["flac", "vorbis", "wav", "mp3", "symphonia-all"] }
crossterm = { version = "0.27", features = ["events"] }
ratatui-image = "3.0.0"
image = "0.25"
rayon = "1.12.0"
rustfft = "6.4.1"
realfft = "3.5.0"
thiserror = "2.0.18"
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.23", features = ["env-filter"] }
tracing-appender = "0.2.5"
gag = "1.0.0"
single-instance = "0.3.3"
wide = "1.3.0"
mimalloc = "0.1.50"
smol_str = { version = "0.3.6", features = ["serde"] }
crossbeam-queue = "0.3.12"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true

[package.metadata.deb]
maintainer = "0xcr3at0rx"
copyright = "2024, 0xcr3at0rx"
license-file = ["LICENSE", "0"]
depends = "$auto, libasound2"
section = "utils"
priority = "optional"
assets = [
    ["target/release/chord", "usr/bin/chord", "755"],
]

[package.metadata.generate-rpm]
assets = [
    { source = "target/release/chord", dest = "/usr/bin/chord", mode = "755" },
]
# Requires: alsa-lib
